--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A JavaScript lab",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R mocha-multi --reporter-options spec=-,json=.results.json"
+    "test": "mocha -R mocha-multi --reporter-options spec=-,json=.results.json -t 19000"
   },
   "author": "flatironschool",
   "license": "Included in Repo",
